Gentle changes to code/dd/anchor contrast Includes fix for outbound link indicators (PT-1088)

--- a/docs/.vuepress/theme/styles/color-mode.pcss
+++ b/docs/.vuepress/theme/styles/color-mode.pcss
@@ -197,13 +197,6 @@
     border-color: var(--border-color);
   }
 
-  dl {
-    code {
-      color: theme("colors.gray.500");
-      background-color: rgba(0, 0, 0, 0.4);
-    }
-  }
-
   .token.treeview-part .line-h:before,
   .token.treeview-part .line-v:before {
     border-left: 1px solid var(--border-color);
