--- a/docs/.vuepress/theme/styles/custom-blocks.pcss
+++ b/docs/.vuepress/theme/styles/custom-blocks.pcss
@@ -39,7 +39,7 @@
   &.tip {}
 
   &.warning {
-    border: 1px solid rgba(178, 148, 0, 0.25);
+    border: 1px solid rgba(178, 148, 0, 1);
 
     &:before {
       background: transparent url("/docs/icons/icon-warning.svg") no-repeat 0 0;
@@ -47,7 +47,7 @@
   }
 
   &.danger {
-    border: 1px solid rgba(229, 66, 43, 0.25);
+    border: 1px solid rgba(229, 66, 43, 1);
 
     .custom-block-title {
       color: rgba(229, 66, 43, 1);
